# shloka

./: .gitignore  LICENSE  README.md  flake.nix  shell.nix  shloka.cabal  statistics.ipynb
.github/workflows/: release.yml
app/: Main.hs
app-localisation/: Main.hs
lib/: Shloka.hs
lib/Shloka/: Extra.hs  Import.hs  Metre.hs  Parse.hs  Syllable.hs  Token.hs
scansion/: shloka.cabal
scripts/: fetch.sh
shloka-scansion/: Shloka.ipynb
statistics/: Shloka.ipynb
test/: Spec.hs
